# tsconfig

./: .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup_systemd_permissions.sh  test_ble_client.py
.github/workflows/: docker-build-push.yml
app/: __init__.py  ble_gateway.py  cli.py  config.py  config_loader.py  logging_config.py  main.py
app/auth/: __init__.py  dependencies.py  middleware.py  oidc_config.py  oidc_handler.py
app/bluetooth/: __init__.py  api_client.py  gatt_characteristics.py  gatt_server.py  protocol.py  services.py
app/configs/: README_audio_devices.md  __init__.py  audio_devices.yml  audio_devices_static.yml  authorized_keys.py  cmdline.py  geolocation.py  model_files.yml  mosquitto_cert.py  mosquitto_conf.py  mqttutil.py  radiotracking.py  schedule.py  soundscapepipe.py  tsupdate.py  wireguard.py
app/data/: audioprotopnet_species.json  birdedge_species.json  yolobat_species.json
app/routers/: auth.py  authorized_keys.py  base.py  configs.py  deployment.py  mqttutil.py  network.py  radiotracking.py  schedule.py  shell.py  soundscapepipe.py  system_reset.py  systemd.py  tsupdate.py  upload.py
app/static/css/: style.css
app/static/js/: app.js  auth.js
app/static/js/components/: configManager.js  configUpload.js  logViewer.js  mqttutilConfig.js  networkConfig.js  radiotrackingConfig.js  resetConfig.js  scheduleConfig.js  shellViewer.js  soundscapepipeConfig.js  sshKeysConfig.js  statusPage.js  tsupdateConfig.js
app/static/js/managers/: serverModeManager.js  serviceManager.js  systemConfigManager.js
app/static/js/mixins/: saveStateMixin.js  serviceActionMixin.js
app/static/js/utils/: apiUtils.js  deploymentUtils.js  systemUtils.js  timeUtils.js  toastUtils.js
app/templates/: base.html  forbidden.html  index.html  radiotracking.html  schedule.html  settings.html  soundscapepipe.html  status.html
app/templates/partials/: alerts.html  footer.html  log_modal.html  navbar.html  shell_modal.html  status_location.html  status_radiotracking.html  status_resources.html  status_soundscapepipe.html
app/utils/: subprocess_async.py
configs/: mqttutil.conf  radiotracking.ini  schedule.yml  soundscapepipe.yml  tsconfig.yml  tsupdate.yml
