[project]
name = "tsconfig"
version = "2025.10.1"
description = "Web-based configuration manager for sensor station schedules"
authors = [
    {name = "Jonas Höchst", email = "hoechst@trackit.systems"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "psutil>=5.9.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
audio = [
    "sounddevice>=0.4.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
