[project]
name = "tsconfig"
version = "2025.11.1"
description = "Web-based configuration manager for sensor station schedules"
authors = [
    {name = "Jonas Höchst", email = "hoechst@trackit.systems"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "psutil>=5.9.0",
    "httpx>=0.28.1",
]
requires-python = ">=3.9"

[project.scripts]
tsconfig = "app.cli:main"

[project.optional-dependencies]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "bleak>=1.1.1",
    "cbor2>=5.4.0",
]
ble = [
    "dbus-python>=1.3.2",
    "pygobject>=3.42.0",
    "cbor2>=5.4.0",
]
