[project]
name = "tsconfig"
version = "2026.3.3"
description = "Web-based configuration manager for sensor station schedules"
authors = [
    {name = "Jonas Höchst", email = "hoechst@trackit.systems"},
    {name = "Artur Sterz", email = "sterz@trackit.systems"}
]
dependencies = [
    "fastapi>=0.115.11",
    "uvicorn[standard]>=0.32.0",
    "websockets>=15.0.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "python-dateutil>=2.9.0",
    "psutil>=7.0.0",
    "httpx>=0.28.1",
]
requires-python = ">=3.12"

[project.scripts]
tsconfig = "app.cli:main"

[project.optional-dependencies]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "auto"

[dependency-groups]
dev = [
    "bleak>=2.1.1",
    "cbor2>=5.6.5",
]
ble = [
    "dbus-python>=1.4.0",
    "pygobject>=3.54.5",
    "cbor2>=5.6.5",
]
auth = [
    "authlib>=1.6.8",
    "itsdangerous>=2.2.0",
]
